[package]
name = "lithium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 3
strip = true
lto = true
panic = "abort"

[dependencies]
json_minimal = "0.1.3"
glob = "0.3.0"
# This will be added later on
# winapi = "0.3.9"
rusqlite = {version = "0.28.0", features = ["blob"]}
tar = {version = "0.4.38", optional = true}
xz = {version = "0.1.0", optional = true}

[features]
package-data = ["dep:tar", "dep:xz"]